--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 	<script type="text/javascript" src="js/respond.js"></script>
 </head>
 <body>
+<h1>CHanges made </h1>
+
+
 
 	
 	<!-- Javascript CDN-->
